Use the Long cache, don't create new Longs if not needed.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/vfs/trunk@1203699 13f79535-47bb-0310-9956-ffa450edef68