@@ -59,7 +59,7 @@ class FtpRandomAccessContent extends AbstractRandomAccessStreamContent
         if (pos < 0)
         {
             throw new FileSystemException("vfs.provider/random-access-invalid-position.error",
-                    new Long(pos));
+                    Long.valueOf(pos));
         }
         if (dis != null)
         {
